# pdf-renamer

./: LICENSE  README.md  pdf_renamer.code-workspace  pyproject.toml
pdf_renamer/: renamer.py
tests/: renamer_test.py
